--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,11 @@ a:hover{
 }
 
 .img-carrossel {
-  width: 200px;
-  height: 400px;
+   object-fit: cover;/*fill */
+  height: 65vh;
+  object-position: 0 50%;
+
+  /* object-fit: cover;
+  width: 100%;
+  height: 65vh; */
 }
